# agent-fabric

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.sessions/: default.json  sess-20260303063823-f71ce75b.json  sess-20260303071031-61f7f77c.json  sess-20260303071444-8d83c386.json
configs/: model.yaml  runtime.yaml
configs/agents/: registry.yaml
configs/agents/entries/: finance-router-agent.yaml  support-triage-agent.yaml
configs/skills/: registry.yaml
examples/: dynamic_orchestrator_registration.py
src/: __init__.py  main.py
src/config/: __init__.py  model_config.py  runtime_config.py
src/observability/: __init__.py  metrics.py
src/orchestrator/: __init__.py  agentscope_executor.py  agentscope_runtime.py  healing.py  interfaces.py  orchestrator_session_runtime.py  planner.py  registration_agent.py  result.py  router.py  runtime.py  skill_md_adapter.py  state.py  system_intent_router.py  toolkit_registry_bridge.py
src/rag/: __init__.py  http_source.py  retriever.py
src/recovery/: __init__.py  classifier.py  healer.py
src/registry/: __init__.py  auto_indexer.py  builtin_provider.py  config_loader.py  discovery.py  hot_reload.py  registrar.py  schema.py  transaction.py
tests/: test_agentscope_executor.py  test_auto_indexer.py  test_dynamic_registration.py  test_executor_loader_dispatch.py  test_hot_reload.py  test_orchestrator_agent_mode.py  test_parallel_executor.py  test_rag_hybrid.py  test_registry_atomicity.py  test_registry_entry_files.py  test_resume_preview.py  test_routing.py  test_session_store.py  test_state_machine.py
(+6 files in other folders)
